# windows-service-rs

./: Cargo.toml
examples/: notify_service.rs  pause_continue.rs
src/: lib.rs  service.rs  service_manager.rs
