[package]
authors = ["Mullvad VPN"]
categories = ["api-bindings", "os::windows-apis"]
description = "A crate that provides facilities for management and implementation of windows services"
edition = "2021"
keywords = ["windows", "service", "daemon"]
license = "MIT OR Apache-2.0"
name = "windows-service"
readme = "README.md"
repository = "https://github.com/mullvad/windows-service-rs"
version = "0.5.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[target.'cfg(windows)'.dependencies]
bitflags = "1.3"
err-derive = "0.3.1"
widestring = "1"

[target.'cfg(windows)'.dependencies.windows-sys]
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Power",
  "Win32_System_RemoteDesktop",
  "Win32_System_Services",
  "Win32_System_SystemServices",
  "Win32_System_WindowsProgramming",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Security_Authorization_UI",
]
version = "0.36.1"
